fixed the comment page error

--- a/views/comments-page.ejs
+++ b/views/comments-page.ejs
@@ -104,7 +104,7 @@
                             <div class="panel-body ">
                                 <div class="row">
                                     <div class="col-xs-2">
-                                        <img src="<%= post.user.profile %>" class="img img-circle pull-center comment-user-img" width="60%" alt="">
+                                        <img src="<%= user.profile %>" class="img img-circle pull-center comment-user-img" width="60%" alt="">
                                     </div>
                                     <div class="col-xs-10">
                                         <textarea class="pull-left comment-area" name="" id="comment-box" cols="52" rows="2"></textarea>
